<?xml version="1.0" encoding="UTF-8" ?>

<resources>
  <string name="settings">Settings</string>
  <string name="settingsAbout">About</string>
  <string name="settingsAboutSummary" />
  <string name="settingsAccountAdd">Add account…</string>
  <string name="settingsAccountCreationFailed">Account creation failed</string>
  <string name="settingsAccountCreationFailedMessage">The account could not be created.</string>
  <string name="settingsAccountCurrent">Current Account</string>
  <string name="settingsAccountDelete">@string/accountDelete</string>
  <string name="settingsAccountDeleteConfirm">Are you sure you want to remove your \"%1$s\" account from this device?</string>
  <string name="settingsAccountDeleteConfirmTitle">Remove account?</string>
  <string name="settingsAccountDeletionFailed">Account deletion failed</string>
  <string name="settingsAccountDeletionFailedMessage">The account \'%1$s\' could not be deleted.</string>
  <string name="settingsAccountOthers">Other Accounts</string>
  <string name="settingsAccountRegistryCreating">Creating an account…</string>
  <string name="settingsAccountRegistryEmpty">No accounts are available.</string>
  <string name="settingsAccountRegistryRefresh">Refresh</string>
  <string name="settingsAccountRegistryRetrieving">Retrieving accounts from registry…</string>
  <string name="settingsAccountRegistrySelect">Please select a library…</string>
  <string name="settingsAccounts">Accounts</string>
  <string name="settingsAccountsSummary">Add, remove, or configure accounts</string>
  <string name="settingsAcknowledgements">Acknowledgements</string>
  <string name="settingsAcknowledgementsSummary" />
  <string name="settingsBuild">Build</string>
  <string name="settingsBuildSummary" />
  <string name="settingsCancel">Cancel</string>
  <string name="settingsCardCreatorLabel">Don\'t have a library card?</string>
  <string name="settingsCardCreatorSignUp">Sign up</string>
  <string name="settingsCOPPADeleteBooks">Delete books?</string>
  <string name="settingsCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="settingsCOPPAOver13">I am over 13</string>
  <string name="settingsCustomOPDS">Custom OPDS Feed</string>
  <string name="settingsCustomOPDSCreate">Create</string>
  <string name="settingsCustomOPDSInvalidURI">Not a valid URI.</string>
  <string name="settingsCustomOPDSURL">Custom feed URL…</string>
  <string name="settingsDebug">Debug options</string>
  <string name="settingsDebugSummary" />
  <string name="settingsDelete">Delete</string>
  <string name="settingsDetails">Details</string>
  <string name="settingsDocumentation">Documentation</string>
  <string name="settingsEULA">User agreement</string>
  <string name="settingsEULAStatement">I agree to the terms of the End User License Agreement.</string>
  <string name="settingsEULASummary" />
  <string name="settingsFaq">FAQ</string>
  <string name="settingsFaqSummary" />
  <string name="settingsInfo">App info</string>
  <string name="settingsLicense">License</string>
  <string name="settingsLicenseSummary">Software license information</string>
  <string name="settingsLogin">Log in</string>
  <string name="settingsLoginWith">Log in with %1$s</string>
  <string name="settingsLoginAlternatives">Alternative Login Methods</string>
  <string name="settingsLogout">Log out</string>
  <string name="settingsPassword">Password</string>
  <string name="settingsPasswordHide">Hide password</string>
  <string name="settingsPasswordShow">Show password</string>
  <string name="settingsPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="settingsReportIssue">Report an issue…</string>
  <string name="settingsSyncBookmarks">Sync bookmarks</string>
  <string name="settingsTapToDebug">Debug mode in %1$d&#8230;</string>
  <string name="settingsUserName">User Name</string>
  <string name="settingsVersion">App version</string>
  <string name="settingsVersionSummary" />
  <string name="settingsVersionCore">Core version</string>
  <string name="settingsVersionCoreSummary" />

  <!-- Debug settings -->
  <string name="pref_category_actions">Actions</string>
  <string name="pref_category_cache">Cache</string>
  <string name="pref_category_features">Features</string>
  <string name="pref_category_modules">Modules</string>

  <string name="pref_title_error_page">Show error page</string>
  <string name="pref_summary_error_page"/>

  <string name="pref_title_error_logs">Send error logs</string>
  <string name="pref_summary_error_logs"/>

  <string name="pref_title_send_analytics">Send analytics</string>
  <string name="pref_summary_send_analytics"/>

  <string name="pref_title_sync_accounts">Sync accounts</string>
  <string name="pref_summary_sync_accounts" />

  <string name="pref_title_add_feed">Add OPDS feed</string>
  <string name="pref_summary_add_feed" />

  <string name="pref_title_cache_location">Location</string>
  <string name="pref_title_cache_size">Size</string>

  <string name="pref_title_testing_libraries">Show non-production libraries</string>
  <string name="pref_summary_testing_libraries" />

  <string name="pref_title_library_selection">Show library selection</string>
  <string name="pref_summary_library_selection" />

  <string name="pref_title_location_nyc">Force location to New York</string>
  <string name="pref_summary_location_nyc">Applies to Card Creator</string>

  <string name="pref_title_readium2">Enable Readium2</string>
  <string name="pref_summary_readium2" />

  <string name="pref_title_show_unsupported">Show unsupported books</string>
  <string name="pref_summary_show_unsupported" />

  <string name="pref_module_enabled">Enabled</string>
  <string name="pref_module_disabled">Not supported</string>
</resources>
