<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/accountRegistryTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/settingsAccountRegistrySelect"
    android:textStyle="bold"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ProgressBar
    android:id="@+id/accountRegistryProgress"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="256dp"
    android:layout_height="32dp"
    android:indeterminate="true"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/accountRegistryProgressText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settingsAccountRegistryRetrieving"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/accountRegistryProgress" />

  <View
    android:layout_width="0dp"
    android:layout_height="1dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/accountRegistryList"
    android:background="?android:attr/listDivider" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/accountRegistryList"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@id/accountRegistryRefreshButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/accountRegistryTitle" />

  <View
    android:layout_width="0dp"
    android:layout_height="1dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/accountRegistryList"
    android:background="?android:attr/listDivider" />

  <Button
    android:id="@+id/accountRegistryRefreshButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/settingsAccountRegistryRefresh"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>